--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Raleway:wght@400;500;600;700&display=swap');
 
+/*body*/
 *{
     border:0;
     margin:0;
@@ -18,23 +19,28 @@ h2{
     text-transform: uppercase;
 }
 
+div a{
+    text-decoration: none;
+}
+
+/*navigation bar*/
+
 #branding{
-    float: left;
-    font-size: 300%;
-    padding-top: 35px;
+    font-size: 250%;
+    padding-top: 45px;
     padding-left: 40px;
 }
 
-#menu{
-    font-size: 150%;
-    list-style-type: none;
-    letter-spacing: 3px;
+.nav-links-container{
     float: right;
-
+    padding-top: 45px;
+    padding-right: 70px;
 }
 
-#menu li{
-    float: left;
-    margin-right: 50px
-    
+#nav a{
+    color: #040404;
+    letter-spacing: 3px;
+    font-size: 175%;
+    margin-right: 20px;
 }
+
