--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Raleway:wght@400;500;600;700&display=swap');
 
-/*body*/
+/*-------------body--------------*/
 *{
     border:0;
     margin:0;
@@ -9,7 +9,7 @@
 }
 body{
     color: #040404;
-    font-family: Raleway, Arial, sans-serif;
+    font-family: 'Raleway', Arial, sans-serif;
 }
 
 h2{
@@ -23,24 +23,37 @@ div a{
     text-decoration: none;
 }
 
-/*navigation bar*/
+/*---------------navigation bar---------------*/
 
 #branding{
-    font-size: 250%;
-    padding-top: 45px;
-    padding-left: 40px;
+    font-size: 35px;
+    padding-top: 35px;
+    padding-left: 35px;
 }
 
 .nav-links-container{
     float: right;
-    padding-top: 45px;
+    padding-top: 50px;
     padding-right: 70px;
 }
 
-#nav a{
-    color: #040404;
+.menu-item{
+    color: inherit;
     letter-spacing: 3px;
-    font-size: 175%;
+    font-size: 25px;
     margin-right: 20px;
+    padding-bottom: 15px;
+    
 }
+
+.menu-item:hover{
+    border-bottom: 2px solid #040404;
+}
+
+.active {
+   border-bottom: 2px solid #040404;
+}
+
+/*---------------home page---------------*/
+
 
