--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Raleway:wght@400;500;600;700&display=swap');
 
 /*-------------body--------------*/
-*{
-    border:0;
-    margin:0;
-    padding:0;
-    
-}
-body{
+
+html,body /*credit to Stackoverflow for this solution to hide white screen*/
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
     color: #040404;
     font-family: 'Raleway', Arial, sans-serif;
-    
 }
+
 
 h2{
     color: #040404;
@@ -38,7 +39,7 @@ div h3{
 /*---------------navigation bar---------------*/
 
 #branding{
-    font-size: 100%;
+    font-size: 2vw;
     padding-top: 35px;
     padding-left: 35px;
 }
@@ -48,6 +49,11 @@ div h3{
     padding-top: 50px;
     padding-right: 70px;
 }
+
+.navbar-logo{
+    margin-right: 0;
+}
+
 
 .menu-item{
     color: inherit;
@@ -77,8 +83,8 @@ div h3{
     position: relative;
     text-align: center;
 }
-
-.hero-text-overlay {
+/*credit to w3school for the overlay position code*/
+.hero-text-overlay { 
     position: absolute;
     top: 50%;
     left: 50%;
@@ -121,11 +127,6 @@ div h3{
 }
 
 /*---------------image and bio---------------*/
-.bio-image-row{
-    margin-left: 0;
-    margin-right: 0;
-}
-
 
 .bio-image{
     width: 100%;
