--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ div h3{
     font-family: 'Raleway';
     letter-spacing: 3px;
     text-align: center;
-    width: 450px;
+    width: 600px;
     height: 300px;
     background-color:rgba(255,255,255, 0.6);
     padding-top: 40px;
@@ -144,3 +144,9 @@ div h3{
 
 }
 /*---------------footer---------------*/
+
+.footer-container{
+    background-color: #7F8C8D ;
+    height: 75px;
+    text-align: center;
+}
