--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /*-------------body--------------*/
 
-html,body /*credit to Stackoverflow for this solution to hide white screen*/
+html,body /*credit to Stackoverflow for solution to hide white screen (first 5 lines)*/
 {
     width: 100%;
     height: 100%;
@@ -150,3 +150,15 @@ div h3{
     height: 75px;
     text-align: center;
 }
+
+.footer-contact-link{
+    color: #040404;
+    padding-top: 25px;
+    font-size: 100%;
+
+}
+
+.social-container{
+    padding-top: 25px;
+}
+
