--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /*-------------body--------------*/
 
-html,body /*credit to Stackoverflow for solution to hide white screen (first 5 lines)*/
+html, body /*credit to Stackoverflow for solution to hide white screen (first 5 lines)*/
 {
     width: 100%;
     height: 100%;
@@ -39,7 +39,7 @@ div h3{
 /*---------------navigation bar---------------*/
 
 #branding{
-    font-size: 2vw;
+    font-size: 1.5vw;
     padding-top: 35px;
     padding-left: 35px;
 }
@@ -106,7 +106,7 @@ div h3{
 .about-me{
     height: 350px;
     width: 100%;
-    background-color: #040404;
+    background-color: white;
 }
 
 .about-me-overlay{
@@ -114,14 +114,13 @@ div h3{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
-    font-size: 100%;
+    color: #040404;
     font-family: 'Raleway';
     letter-spacing: 3px;
     text-align: center;
-    width: 600px;
+    width: 300px;
     height: 300px;
-    background-color:rgba(255,255,255, 0.6);
+    background-color:rgba(32, 28, 28, 0.315);
     padding-top: 40px;
 
 }
@@ -146,8 +145,8 @@ div h3{
 /*---------------footer---------------*/
 
 .footer-container{
-    background-color: #7F8C8D ;
-    height: 75px;
+    background-color: rgba(32, 28, 28, 0.315);
+    height: 80px;
     text-align: center;
 }
 
