--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /*-------------body--------------*/
 
-html, body /*credit to Stackoverflow for solution to hide white screen (first 5 lines)*/
+body 
 {
     width: 100%;
     height: 100%;
@@ -29,8 +29,6 @@ div a{
 div h3{
     font-size: 150%;
 }
-
-
 
 .container-fluid{
     padding-left: 0;
@@ -226,22 +224,32 @@ footer{
 
 }
 
-.btn-primary{
-    color: #040404;
-    background-color: white;
-    border-color: white;
 
-}
-
-
-.carousel-inner > .carousel-item > img {
-  width:450px;
-  height:500px;
-  border-bottom: white;
-}
+/*---------------library page---------------*/
 
 .carousel-padding{
     padding-top: 125px;
     padding-bottom: 25px;
 
 }
+
+.carousel-inner > .carousel-item > img {
+  width:auto;
+  height:600px;
+}
+
+
+.article-row{
+    padding-top: 75px;
+}
+
+.card{
+    width: auto;
+}
+
+.card-spacing{
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 25px;
+}
+
