--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,12 @@ body
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     overflow-x: hidden;
     color: #040404;
     font-family: 'Raleway', Arial, sans-serif;
 }
-
 
 h2{
     color: #040404;
@@ -46,7 +45,7 @@ legend{
 /*---------------navigation bar---------------*/
 
 #branding{
-    font-size: 1.25vw;
+    font-size: 75%;
     padding-top: 35px;
     padding-left: 35px;
     line-height: 0.75;
