--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,10 @@
 
 body 
 {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
     color: #040404;
     font-family: 'Raleway', Arial, sans-serif;
 }
@@ -21,7 +20,7 @@ h2{
     
 }
 
-div a{
+div a, nav a{
     text-decoration: none;
 }
 
@@ -44,28 +43,31 @@ legend{
 
 /*---------------navigation bar---------------*/
 
-#branding{
-    font-size: 75%;
-    padding-top: 35px;
-    padding-left: 35px;
-    line-height: 0.75;
-}
-
-.nav-links-container{
-    float: right;
-    padding-top: 50px;
-    padding-right: 70px;
+.navbar-padding{
+    padding-top: 25px;
 }
 
 .navbar-logo{
-    margin-right: 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Playfair Display', sans-serif;
+    color: #040404;
+    letter-spacing: 3px;
+    font-size: 75%;
+    padding-left: 15px;
+    line-height: 0.75;
+    
+}
+
+.toggler-text{
+    text-align: right;
 }
 
 
 .menu-item{
-    color: inherit;
+    color: #040404;
     letter-spacing: 3px;
-    font-size: 100%;
+    font-size: 75%;
     margin-right: 20px;
     padding-bottom: 15px;
     text-transform: uppercase;
