--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ legend{
 
 .navbar-padding{
     padding-top: 25px;
-    padding-right: 10px;
+    padding-right: 15px;
 }
 
 .navbar-logo{
@@ -107,13 +107,18 @@ hero.column{
 
 /*---------------about section---------------*/
 
+.center-about-column{
+    height: 350px;
+    width: 100%;
+    background-color: white;
+}
 
 
 /*---------------image and bio---------------*/
 
 .bio-image{
-    width: 100%;
-    height: 700px;
+    width: auto;
+    height: auto;
     overflow: hidden;
     
 }
