--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,6 @@ body
     font-family: 'Raleway', Arial, sans-serif;
 }
 
-h2{
-    color: #040404;
-    font-family: 'Playfair Display';
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    
-}
 
 div a, nav a{
     text-decoration: none;
@@ -27,10 +20,6 @@ div a, nav a{
 
 div h3{
     font-size: 150%;
-}
-
-.row>*{
-    padding-right: 0;
 }
 
 .container-fluid{
@@ -94,49 +83,58 @@ legend{
 
 /*---------------hero image---------------*/
 
-hero.column{
-    padding: 0;
-}
-
-.hero-image{
+#hero-image-row{
+    background: url('../images/hero-image-newspaper-2.jpg');
     height: 700px;
     width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+/*--------------------credit to csstricks.com for aligment of text overlay customised to suit this project---------*/
+.hero-image-text{
+   background-color: rgba(240, 240, 240, 0.3) ;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   color: #040404;
+   text-align: center;
+   
+   
+}
+
+h1{
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 2rem;
+  font-family: 'Playfair Display';
+  letter-spacing: 3px;
+  padding-top: 15px;
+  padding-bottom: 20px;
+
+}
+
+h2{
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 1.5rem;
+  font-family: 'Playfair Display';
+  letter-spacing: 3px;
+  padding-bottom: 15px;
+
 }
 
 
-
-/*---------------about section---------------*/
-
-.center-about-column{
-    height: 350px;
-    width: 100%;
-    background-color: white;
-}
-
-
-/*---------------image and bio---------------*/
-
-.bio-image{
-    width: auto;
-    height: auto;
-    overflow: hidden;
-    
-}
-
-.bio-background-image{
-    width: 100%;
-    height: 700px;
-    background-attachment: fixed;
-    overflow: hidden;
-    
-
-}
 /*---------------footer---------------*/
 /*---------------credit to ci walkthrough for footer styling---------------*/
 
 
 footer{
     background-color: rgba(32, 28, 28, 0.315);
+    background-size: cover;
     min-height: 100px;
     text-align: center;
     width: 100%;
