--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,11 +54,6 @@ div h3{
     text-align: right;
 }
 
-.button-border{
-    border-color: transparent;
-}
-
-
 .menu-item{
     color: #040404;
     letter-spacing: 3px;
@@ -66,7 +61,7 @@ div h3{
     margin-right: 20px;
     padding-bottom: 15px;
     text-transform: uppercase;
-    line-height: 1;
+    line-height: 0.75;
     
 }
 
@@ -153,19 +148,17 @@ h2{
    padding-right: 25px;
 }
 
-/*---------------bio section---------------*/
+/*---------------profile section---------------*/
 
-#bio-row-background{
-    height: 350px;
-    width: 100%;
+.profile-row{
+    height: auto;
     background-color: rgb(239, 239, 239)
-   
-
 }
 
-.profile-image{
-    object-fit: contain;
+.biography-text{
+    margin: 50px;
 }
+
 
 /*---------------footer---------------*/
 /*---------------credit to ci walkthrough for footer styling---------------*/
@@ -173,10 +166,8 @@ h2{
 
 footer{
     background-color: rgba(32, 28, 28, 0.315);
-    background-size: cover;
     min-height: 100px;
     text-align: center;
-    width: 100%;
 }
 
 .footer-row{
