--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,8 +217,8 @@ footer{
 }
 
 .carousel-inner > .carousel-item > img {
-  width:auto;
-  height:550px;
+  width:612px;
+  height:408px;
 }
 
 .row-spacing{
@@ -233,31 +233,37 @@ footer{
 }
 
 .card-logo{
-    height: 225px;
+    height: 200px;
+    width: auto;
+    margin-right: 25px;
+    margin-left: 25px;
 }
 
 /*---------------------------------------end of library page-----------*/
 
 /*------------------------------------------contact page---------------*/
 
-.contact-background{
-    height: 950px;
-    width: 100%;
-    background-color: rgba(32, 28, 28, 0.315);
+#contact-page-background{
+    background: url('../images/birds-on-a-wire.jpg');
+    height: 750px;
+    width: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
 }
 
 .form-position{
-    margin-top: 250px;
-    
+    margin-top: 150px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
-.btn{
-
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-
+.form-background{
+    background-color: rgba(240, 240, 240, 0.7)
 }
+
+
 
 /*----------------------------------end of contact page-----------*/
