--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body
     height: auto;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     color: #040404;
     font-family: 'Raleway', Arial, sans-serif;
 }
@@ -23,6 +23,7 @@ div h3{
 
 .container-fluid{
     padding: 0;
+    overflow-x: hidden !important;
 }
 
 .inline-block{
