--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ h2{
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    color: #040404;
-   text-align: center;
+   text-align: left;
    padding-left: 25px;
    padding-right: 25px;
 }
@@ -258,3 +258,19 @@ footer{
     padding: 25px;
 }
 /*-------------------------------------end of footer--------------*/
+
+
+@media(max-width: 365px){
+.navbar-logo{
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Playfair Display', sans-serif;
+    color: #040404;
+    letter-spacing: 3px;
+    font-size: 50%;
+    padding-left: 15px;
+    line-height: 0.75;
+    
+}
+
+}
