--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,7 @@ footer{
     color: #040404;
     letter-spacing: 3px;
     font-size: 50%;
+    font-weight: 600;
     padding-left: 15px;
     line-height: 0.75;
     
