--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ h2{
   font-family: 'Playfair Display';
   letter-spacing: 3px;
   padding-bottom: 15px;
+  text-align: center;
 
 }
 
@@ -137,7 +138,7 @@ h2{
 }
 
 .about-row-text{
-   background-color: rgba(240, 240, 240, 0.7) ;
+   background-color: rgba(240, 240, 240, 0.7);
    position: absolute;
    top: 50%;
    left: 50%;
@@ -145,7 +146,7 @@ h2{
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    color: #040404;
-   text-align: left;
+   text-align: center;
    padding-left: 25px;
    padding-right: 25px;
 }
@@ -172,7 +173,7 @@ h2{
 
 
 .row-spacing{
-    margin-top: 50px;
+    margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
 }
