--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ div h3{
 }
 /*--------------------credit to csstricks.com for aligment of text overlay customised to suit this project---------*/
 .hero-image-text{
-   background-color: rgba(240, 240, 240, 0.3);
+   background-color: rgba(240, 240, 240, 0.5);
    position: absolute;
    top: 50%;
    left: 50%;
@@ -114,7 +114,7 @@ h1{
 
 }
 
-h2{
+h2, h3{
   text-transform: uppercase;
   margin: 0;
   font-size: 1.5rem;
@@ -127,7 +127,7 @@ h2{
 
 #about-row-background{
     background: url('../images/birds-on-a-wire.jpg');
-    height: 450px;
+    min-height: 450px;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -138,7 +138,7 @@ h2{
 }
 
 .about-row-text{
-   background-color: rgba(240, 240, 240, 0.7);
+   background-color: rgba(240, 240, 240, 0.8);
    position: absolute;
    top: 50%;
    left: 50%;
@@ -146,9 +146,12 @@ h2{
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    color: #040404;
-   text-align: center;
    padding-left: 25px;
    padding-right: 25px;
+}
+
+.about-line{
+    text-align: center;
 }
 
 .profile-row{
@@ -157,8 +160,20 @@ h2{
 }
 
 .biography-text{
-    margin: 50px;
+    margin: 25px;
+
 }
+
+.bio-buttons-position{
+    text-align: center;
+    margin-top: 50px;
+}
+
+.bio-buttons{
+    margin: 10px;
+}
+
+
 
 /*-----------------------------------end of home page-----------*/
 
